feat: Configure API keys via .env file for enhanced notebook
- Added OpenAI and LangChain API keys to .env configuration
- Updated notebook to use dotenv for environment variable loading
- Enhanced error handling for missing API keys with helpful guidance
- Added automatic fallback to simulation mode when API keys unavailable
- Updated RAG system to support both real embeddings and keyword search
- Enhanced investigation agents to use real LLM or simulation mode
- Updated api_config_template.env to include AI/ML platform APIs
- Improved user experience with clear configuration instructions

--- a/investigator_ai_enhanced_notebook.ipynb
+++ b/investigator_ai_enhanced_notebook.ipynb
@@ -42,10 +42,8 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
         "import os\n",
         "import json\n",
@@ -59,6 +57,9 @@
         "import random\n",
         "import uuid\n",
         "from pathlib import Path\n",
+        "\n",
+        "# Environment variable loading\n",
+        "from dotenv import load_dotenv\n",
         "\n",
         "# LLM and Agent Libraries\n",
         "from langchain_openai import ChatOpenAI, OpenAIEmbeddings\n",
@@ -80,11 +81,37 @@
         "from ragas.metrics import faithfulness, answer_relevancy, context_precision, context_recall\n",
         "from datasets import Dataset\n",
         "\n",
-        "# Set up API keys (replace with your actual keys)\n",
-        "os.environ[\"OPENAI_API_KEY\"] = \"your-openai-api-key-here\"\n",
-        "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-        "os.environ[\"LANGCHAIN_API_KEY\"] = \"your-langchain-api-key-here\"\n",
+        "# Load environment variables from .env file\n",
+        "load_dotenv()\n",
         "\n",
+        "# Verify API keys are loaded (with helpful error messages)\n",
+        "def check_api_keys():\n",
+        "    \"\"\"Check if required API keys are available\"\"\"\n",
+        "    required_keys = {\n",
+        "        \"OPENAI_API_KEY\": \"OpenAI API key for LLM capabilities\",\n",
+        "        \"LANGCHAIN_API_KEY\": \"LangChain API key for tracing (optional)\"\n",
+        "    }\n",
+        "    \n",
+        "    missing_keys = []\n",
+        "    for key, description in required_keys.items():\n",
+        "        if not os.getenv(key) or os.getenv(key) == f\"your-{key.lower().replace('_', '-')}-here\":\n",
+        "            missing_keys.append(f\"  • {key}: {description}\")\n",
+        "    \n",
+        "    if missing_keys:\n",
+        "        print(\"⚠️  API Keys Missing or Not Configured:\")\n",
+        "        for key in missing_keys:\n",
+        "            print(key)\n",
+        "        print(\"\\n💡 To configure:\")\n",
+        "        print(\"   1. Edit the .env file in the project root\")\n",
+        "        print(\"   2. Replace placeholder values with your actual API keys\")\n",
+        "        print(\"   3. Restart this notebook\")\n",
+        "        print(\"\\n🎯 For demo purposes, the system will use simulation mode\")\n",
+        "        return False\n",
+        "    else:\n",
+        "        print(\"✅ All required API keys are configured!\")\n",
+        "        return True\n",
+        "\n",
+        "api_keys_available = check_api_keys()\n",
         "print(\"✅ All dependencies imported successfully!\")\n"
       ]
     },
@@ -350,8 +377,22 @@
         "    \n",
         "    def __init__(self):\n",
         "        self.client = QdrantClient(\":memory:\")  # In-memory for notebook\n",
-        "        self.embeddings = OpenAIEmbeddings()\n",
         "        self.collection_name = \"regulatory_knowledge\"\n",
+        "        \n",
+        "        # Check if we can use real embeddings\n",
+        "        if api_keys_available and os.getenv(\"OPENAI_API_KEY\"):\n",
+        "            try:\n",
+        "                self.embeddings = OpenAIEmbeddings()\n",
+        "                self.use_real_embeddings = True\n",
+        "                print(\"✅ Using real OpenAI embeddings for RAG system\")\n",
+        "            except Exception as e:\n",
+        "                print(f\"⚠️ Could not initialize OpenAI embeddings: {e}\")\n",
+        "                print(\"   Using simulation mode for embeddings\")\n",
+        "                self.use_real_embeddings = False\n",
+        "        else:\n",
+        "            self.use_real_embeddings = False\n",
+        "            print(\"🎯 Using simulated embeddings (configure OPENAI_API_KEY in .env for real embeddings)\")\n",
+        "        \n",
         "        self.setup_collection()\n",
         "    \n",
         "    def setup_collection(self):\n",
@@ -422,34 +463,110 @@
         "        # Create intelligent chunks\n",
         "        chunks = self.chunk_regulatory_content(documents)\n",
         "        \n",
-        "        # For demonstration, we'll simulate this process since OpenAI API might not be available\n",
-        "        # In production, this would generate real embeddings\n",
-        "        print(f\"✅ Simulated indexing of {len(chunks)} regulatory chunks\")\n",
-        "        print(\"   Note: In production, this would use actual OpenAI embeddings\")\n",
+        "        if self.use_real_embeddings:\n",
+        "            # Generate real embeddings and store in Qdrant\n",
+        "            print(f\"🔄 Generating embeddings for {len(chunks)} chunks...\")\n",
+        "            batch_size = 20\n",
+        "            points = []\n",
+        "            \n",
+        "            for i in range(0, len(chunks), batch_size):\n",
+        "                batch_chunks = chunks[i:i + batch_size]\n",
+        "                batch_texts = [chunk['text'] for chunk in batch_chunks]\n",
+        "                try:\n",
+        "                    batch_embeddings = self.embeddings.embed_documents(batch_texts)\n",
+        "                    \n",
+        "                    for chunk, embedding in zip(batch_chunks, batch_embeddings):\n",
+        "                        points.append(PointStruct(\n",
+        "                            id=chunk['id'],\n",
+        "                            vector=embedding,\n",
+        "                            payload={\n",
+        "                                \"text\": chunk['text'],\n",
+        "                                \"category\": chunk['category'],\n",
+        "                                \"chunk_type\": chunk['chunk_type'],\n",
+        "                                \"is_procedure\": chunk['is_procedure'],\n",
+        "                                \"has_red_flags\": chunk['has_red_flags'],\n",
+        "                                \"is_regulatory\": chunk['is_regulatory'],\n",
+        "                                \"is_case_study\": chunk['is_case_study']\n",
+        "                            }\n",
+        "                        ))\n",
+        "                except Exception as e:\n",
+        "                    print(f\"⚠️ Error generating embeddings: {e}\")\n",
+        "                    print(\"   Falling back to simulation mode\")\n",
+        "                    self.use_real_embeddings = False\n",
+        "                    break\n",
+        "                    \n",
+        "                print(f\"  Processed {min(i + batch_size, len(chunks))}/{len(chunks)} chunks...\")\n",
+        "            \n",
+        "            if self.use_real_embeddings and points:\n",
+        "                # Upload to Qdrant\n",
+        "                self.client.upsert(collection_name=self.collection_name, points=points)\n",
+        "                print(\"✅ Real embeddings generated and indexed!\")\n",
         "        \n",
-        "        # Store chunks for search simulation\n",
+        "        if not self.use_real_embeddings:\n",
+        "            # Store chunks for search simulation\n",
+        "            print(f\"✅ Simulated indexing of {len(chunks)} regulatory chunks\")\n",
+        "            print(\"   Note: Configure OPENAI_API_KEY in .env for real embeddings\")\n",
+        "        \n",
+        "        # Always store chunks for search functionality\n",
         "        self.chunks = chunks\n",
         "    \n",
         "    def search_regulatory_guidance(self, query: str, top_k: int = 5, \n",
         "                                 content_type: str = None) -> List[Dict]:\n",
         "        \"\"\"Search regulatory knowledge base with enhanced filtering\"\"\"\n",
         "        \n",
-        "        # For demonstration, simulate search results\n",
         "        if not hasattr(self, 'chunks'):\n",
         "            return []\n",
         "        \n",
-        "        # Filter chunks by content type if specified\n",
+        "        if self.use_real_embeddings:\n",
+        "            # Use real vector search with embeddings\n",
+        "            try:\n",
+        "                query_embedding = self.embeddings.embed_query(query)\n",
+        "                \n",
+        "                # Build content type filter\n",
+        "                search_filter = None\n",
+        "                if content_type:\n",
+        "                    search_filter = {\"chunk_type\": content_type}\n",
+        "                \n",
+        "                # Search regulatory knowledge\n",
+        "                search_results = self.client.search(\n",
+        "                    collection_name=self.collection_name,\n",
+        "                    query_vector=query_embedding,\n",
+        "                    limit=top_k,\n",
+        "                    query_filter=search_filter,\n",
+        "                    with_payload=True\n",
+        "                )\n",
+        "                \n",
+        "                return [\n",
+        "                    {\n",
+        "                        \"text\": result.payload[\"text\"],\n",
+        "                        \"category\": result.payload[\"category\"],\n",
+        "                        \"chunk_type\": result.payload[\"chunk_type\"],\n",
+        "                        \"similarity_score\": result.score,\n",
+        "                        \"is_regulatory\": result.payload.get(\"is_regulatory\", False),\n",
+        "                        \"has_red_flags\": result.payload.get(\"has_red_flags\", False),\n",
+        "                        \"is_procedure\": result.payload.get(\"is_procedure\", False)\n",
+        "                    }\n",
+        "                    for result in search_results\n",
+        "                ]\n",
+        "            except Exception as e:\n",
+        "                print(f\"⚠️ Vector search failed: {e}\")\n",
+        "                print(\"   Falling back to keyword search\")\n",
+        "        \n",
+        "        # Fallback to simulated/keyword search\n",
         "        filtered_chunks = self.chunks\n",
         "        if content_type:\n",
         "            filtered_chunks = [c for c in self.chunks if c['chunk_type'] == content_type]\n",
         "        \n",
-        "        # Simulate relevance scoring (in production, use vector similarity)\n",
+        "        # Enhanced keyword-based relevance scoring\n",
         "        relevant_chunks = []\n",
         "        query_lower = query.lower()\n",
+        "        query_words = query_lower.split()\n",
         "        \n",
-        "        for chunk in filtered_chunks[:top_k]:\n",
-        "            # Simple relevance simulation\n",
-        "            relevance = 0.8 if any(word in chunk['text'].lower() for word in query_lower.split()) else 0.5\n",
+        "        for chunk in filtered_chunks:\n",
+        "            # Calculate relevance score based on keyword matches\n",
+        "            text_lower = chunk['text'].lower()\n",
+        "            word_matches = sum(1 for word in query_words if word in text_lower)\n",
+        "            relevance = min(0.9, 0.3 + (word_matches / len(query_words)) * 0.6)\n",
         "            \n",
         "            relevant_chunks.append({\n",
         "                \"text\": chunk['text'],\n",
@@ -461,7 +578,9 @@
         "                \"is_procedure\": chunk.get('is_procedure', False)\n",
         "            })\n",
         "        \n",
-        "        return relevant_chunks\n",
+        "        # Sort by relevance and return top_k\n",
+        "        relevant_chunks.sort(key=lambda x: x['similarity_score'], reverse=True)\n",
+        "        return relevant_chunks[:top_k]\n",
         "\n",
         "# Initialize enhanced RAG system with real regulatory data\n",
         "rag_system = EnhancedInvestigationRAG()\n",
@@ -498,10 +617,21 @@
         "    \"\"\"Multi-agent system powered by real regulatory guidance\"\"\"\n",
         "    \n",
         "    def __init__(self, rag_system: EnhancedInvestigationRAG):\n",
-        "        # For demo purposes, we'll simulate LLM responses\n",
-        "        # In production: self.llm = ChatOpenAI(model=\"gpt-4\", temperature=0.1)\n",
         "        self.rag_system = rag_system\n",
-        "        self.demo_mode = True  # Set to False in production with real API keys\n",
+        "        \n",
+        "        # Check if we have API keys available\n",
+        "        if api_keys_available and os.getenv(\"OPENAI_API_KEY\"):\n",
+        "            try:\n",
+        "                self.llm = ChatOpenAI(model=\"gpt-4\", temperature=0.1)\n",
+        "                self.demo_mode = False\n",
+        "                print(\"✅ Using real OpenAI LLM for investigation agents\")\n",
+        "            except Exception as e:\n",
+        "                print(f\"⚠️ Could not initialize OpenAI LLM: {e}\")\n",
+        "                print(\"   Falling back to simulation mode\")\n",
+        "                self.demo_mode = True\n",
+        "        else:\n",
+        "            self.demo_mode = True\n",
+        "            print(\"🎯 Using simulation mode (configure API keys in .env for full capabilities)\")\n",
         "    \n",
         "    async def monitor_agent(self, state: AgentState) -> AgentState:\n",
         "        \"\"\"Agent 1: Real-time monitoring with regulatory red flag detection\"\"\"\n",
@@ -514,8 +644,9 @@
         "            content_type=\"red_flags\"\n",
         "        )\n",
         "        \n",
-        "        # Simulate regulatory analysis (in production, use actual LLM)\n",
+        "        # Generate regulatory analysis using LLM or simulation\n",
         "        if self.demo_mode:\n",
+        "            # Simulation mode\n",
         "            regulatory_analysis = f\"\"\"\n",
         "            REGULATORY RED FLAG ANALYSIS:\n",
         "            Based on actual FinCEN and FFIEC guidance, this ${transaction.amount:,.2f} {transaction.transaction_type.value}\n",
@@ -528,6 +659,38 @@
         "            REGULATORY COMPLIANCE: Enhanced due diligence required per FFIEC procedures\n",
         "            SAR CONSIDERATION: Transaction meets preliminary criteria for suspicious activity reporting\n",
         "            \"\"\"\n",
+        "        else:\n",
+        "            # Use real LLM for analysis\n",
+        "            regulatory_context = \"\\n\".join([result[\"text\"] for result in red_flag_guidance])\n",
+        "            \n",
+        "            prompt = f\"\"\"\n",
+        "            You are a Real-Time Transaction Monitoring Agent using actual regulatory guidance.\n",
+        "            \n",
+        "            TRANSACTION TO ANALYZE:\n",
+        "            - Amount: ${transaction.amount:,.2f}\n",
+        "            - Type: {transaction.transaction_type.value}\n",
+        "            - Route: {transaction.from_location} → {transaction.to_location}\n",
+        "            - Customer: {transaction.customer_id}\n",
+        "            - Risk Indicators: {transaction.risk_indicators}\n",
+        "            \n",
+        "            RELEVANT REGULATORY RED FLAGS:\n",
+        "            {regulatory_context}\n",
+        "            \n",
+        "            Based on the actual regulatory guidance above, provide:\n",
+        "            1. Overall risk level (LOW/MEDIUM/HIGH/CRITICAL)\n",
+        "            2. Specific red flags from regulatory guidance that apply\n",
+        "            3. Recommended investigation priority\n",
+        "            4. Initial steps based on regulatory procedures\n",
+        "            \n",
+        "            Reference the specific regulatory guidance in your analysis.\n",
+        "            \"\"\"\n",
+        "            \n",
+        "            try:\n",
+        "                response = await self.llm.ainvoke([HumanMessage(content=prompt)])\n",
+        "                regulatory_analysis = response.content\n",
+        "            except Exception as e:\n",
+        "                print(f\"⚠️ LLM call failed: {e}\")\n",
+        "                regulatory_analysis = \"LLM analysis temporarily unavailable - using fallback assessment\"\n",
         "        \n",
         "        # Enhanced risk assessment using regulatory criteria\n",
         "        risk_assessment = {\n",
@@ -1035,7 +1198,19 @@
         "    print(\"   ✅ Authentic compliance procedures implemented\")\n",
         "else:\n",
         "    print(\"   ⚠️ Using sample regulatory content\")\n",
-        "    print(\"   💡 Run 'python get_text_data.py' for full capabilities\")\n",
+        "    print(\"   💡 Run 'python get_text_data.py' for full regulatory data\")\n",
+        "\n",
+        "print(\"\\n🔑 API CONFIGURATION STATUS:\")\n",
+        "if api_keys_available:\n",
+        "    print(\"   ✅ API keys configured - using real LLM and embeddings\")\n",
+        "    print(\"   ✅ OpenAI GPT-4 for investigation reasoning\")\n",
+        "    print(\"   ✅ OpenAI embeddings for vector search\")\n",
+        "else:\n",
+        "    print(\"   ⚠️ Using simulation mode\")\n",
+        "    print(\"   💡 Configure API keys in .env file for full capabilities:\")\n",
+        "    print(\"      1. Edit .env file in project root\")\n",
+        "    print(\"      2. Add your OPENAI_API_KEY\")\n",
+        "    print(\"      3. Restart notebook for real LLM integration\")\n",
         "\n",
         "print(\"\\n🚀 PRODUCTION DEPLOYMENT READY:\")\n",
         "print(\"   • Enhanced FastAPI backend with regulatory integration\")\n",
