debug: Add enhanced debugging to identify why agents don't call tools

--- a/investigator_ai_ragas_evaluation.ipynb
+++ b/investigator_ai_ragas_evaluation.ipynb
@@ -1351,20 +1351,57 @@
           "text": [
             "🤖 Generating agent responses for evaluation...\n",
             "🎯 Feeding HumanMessage to InvestigatorAI SUPERVISOR via the multi-agent graph...\n",
-            "🔧 Capturing tool calls directly from evidence collection agent...\n",
-            "✅ Evidence agent completed!\n",
-            "📋 Agent result keys: dict_keys(['messages', 'output'])\n",
-            "[]\n",
-            "🛠️  Found 0 intermediate steps\n",
-            "📋 Built complete trace with 2 messages\n",
-            "🛠️  Found 0 messages with tool calls\n",
-            "✅ Generated 1 agent investigation for evaluation!\n"
+            "🔍 DEBUGGING: Testing if agents are actually making tool calls...\n",
+            "🔧 Testing evidence collection agent directly...\n",
+            "📋 Agent tools: ['calculate_transaction_risk', 'get_exchange_rate_data', 'search_web_intelligence']\n",
+            "🤖 LLM model: gpt-4\n",
+            "🔧 LLM type: <class 'langchain_openai.chat_models.base.ChatOpenAI'>\n",
+            "🎯 Agent type: <class 'langchain.agents.agent.RunnableAgent'>\n",
+            "📋 Agent has tools: True\n",
+            "🔍 Testing if agent recognizes available tools...\n",
+            "🔗 Agent LLM chain: None\n",
+            "📋 Agent attributes: ['__abstractmethods__', '__annotations__', '__class__', '__class_getitem__', '__class_vars__', '__copy__', '__deepcopy__', '__delattr__', '__dict__', '__dir__']...\n",
+            "🔧 Testing calculate_transaction_risk tool directly...\n",
+            "❌ Tool error: BaseTool.__call__() takes from 2 to 3 positional arguments but 5 were given\n",
+            "🔍 Agent return_intermediate_steps: False\n",
+            "🔧 Testing with VERBOSE=True to see agent reasoning...\n",
+            "🔧 Testing with MANDATORY tool-triggering message...\n",
+            "\n",
+            "\n",
+            "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+            "\u001b[32;1m\u001b[1;3m\n",
+            "Invoking: `calculate_transaction_risk` with `{'amount': 75000.0, 'country_to': 'Iran', 'customer_risk_rating': 'High', 'account_type': 'Business'}`\n",
+            "\n",
+            "\n",
+            "\u001b[0m\u001b[36;1m\u001b[1;3mRisk Score: 1.00 (HIGH)\n",
+            "Risk Factors: Moderate amount ($50K-$100K), High-risk destination country, High-risk customer rating, Business account (higher complexity)\u001b[0m\u001b[32;1m\u001b[1;3mThe risk score for this transaction is calculated as 1.00, which is categorized as HIGH risk. The contributing risk factors include:\n",
+            "\n",
+            "- Moderate transaction amount ($50K-$100K)\n",
+            "- High-risk destination country (Iran)\n",
+            "- High-risk customer rating\n",
+            "- Business account, which adds higher complexity to the transaction.\u001b[0m\n",
+            "\n",
+            "\u001b[1m> Finished chain.\u001b[0m\n",
+            "📋 Result keys: ['messages', 'output']\n",
+            "📋 Output: The risk score for this transaction is calculated as 1.00, which is categorized as HIGH risk. The contributing risk factors include:\n",
+            "\n",
+            "- Moderate transaction amount ($50K-$100K)\n",
+            "- High-risk destination...\n",
+            "🛠️  Intermediate steps count: 0\n",
+            "❌ NO INTERMEDIATE STEPS - Agent didn't call any tools!\n",
+            "💡 This suggests either:\n",
+            "  1. Agent prompt isn't triggering tool usage\n",
+            "  2. AgentExecutor return_intermediate_steps=False\n",
+            "  3. Tool calls are failing\n",
+            "\n",
+            "🔄 Testing supervisor graph...\n"
           ]
         }
       ],
       "source": [
         "# 🎯 SIMPLE SOLUTION: Just feed a HumanMessage to the real InvestigatorAI agent!\n",
         "from langchain_core.messages import HumanMessage\n",
+        "import time\n",
         "\n",
         "print(\"🤖 Generating agent responses for evaluation...\")\n",
         "\n",
@@ -1410,30 +1447,132 @@
         "# Override with our investigation message\n",
         "investigation_state[\"messages\"] = [investigation_message]\n",
         "\n",
-        "# 🎉 SOLUTION: Use the FIXED API that now preserves tool calls!\n",
-        "print(\"🚀 Running complete InvestigatorAI multi-agent investigation with preserved tool calls...\")\n",
+        "# 🔍 DEBUG: Let's find out WHY there are no tool calls!\n",
+        "print(\"🔍 DEBUGGING: Testing if agents are actually making tool calls...\")\n",
         "\n",
-        "# Run the FULL multi-agent system through the supervisor\n",
-        "# The API now automatically preserves all tool calls from all agents!\n",
-        "final_state = supervisor_graph.invoke(investigation_state)\n",
+        "# Test 1: Direct agent invocation with debugging\n",
+        "evidence_agent = fraud_system.agents[\"evidence_collection\"]\n",
+        "print(f\"🔧 Testing evidence collection agent directly...\")\n",
         "\n",
-        "print(f\"✅ Multi-agent investigation completed!\")\n",
-        "print(f\"📋 Final state contains {len(final_state.get('messages', []))} messages\")\n",
+        "# Test with verbose mode to see what's happening\n",
+        "try:\n",
+        "    # Check if the agent has tools\n",
+        "    print(f\"📋 Agent tools: {[tool.name for tool in evidence_agent.tools]}\")\n",
+        "    \n",
+        "    # Check LLM configuration\n",
+        "    print(f\"🤖 LLM model: {fraud_system.llm.model_name}\")\n",
+        "    print(f\"🔧 LLM type: {type(fraud_system.llm)}\")\n",
+        "    \n",
+        "    # Check agent type and configuration\n",
+        "    print(f\"🎯 Agent type: {type(evidence_agent.agent)}\")\n",
+        "    print(f\"📋 Agent has tools: {len(evidence_agent.tools) > 0}\")\n",
+        "    \n",
+        "    # Try to see if the agent actually recognizes tools\n",
+        "    print(\"🔍 Testing if agent recognizes available tools...\")\n",
+        "    agent_llm_chain = evidence_agent.agent.llm_chain if hasattr(evidence_agent.agent, 'llm_chain') else None\n",
+        "    print(f\"🔗 Agent LLM chain: {agent_llm_chain}\")\n",
+        "    \n",
+        "    # Check if the underlying agent has the expected structure for function calling\n",
+        "    print(f\"📋 Agent attributes: {dir(evidence_agent.agent)[:10]}...\")  # First 10 attributes\n",
+        "    \n",
+        "    # Test individual tool first\n",
+        "    print(\"🔧 Testing calculate_transaction_risk tool directly...\")\n",
+        "    from api.agents.tools import calculate_transaction_risk\n",
+        "    try:\n",
+        "        tool_result = calculate_transaction_risk(75000.0, \"Iran\", \"High\", \"Business\")\n",
+        "        print(f\"✅ Tool works: {tool_result[:100]}...\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"❌ Tool error: {e}\")\n",
+        "    \n",
+        "    # ✅ Check if agent has return_intermediate_steps enabled\n",
+        "    print(f\"🔍 Agent return_intermediate_steps: {evidence_agent.return_intermediate_steps}\")\n",
+        "    \n",
+        "    # Test with VERBOSE agent to see what's happening\n",
+        "    print(\"🔧 Testing with VERBOSE=True to see agent reasoning...\")\n",
+        "    evidence_agent.verbose = True\n",
+        "    \n",
+        "    # Test with a VERY explicit tool-triggering prompt\n",
+        "    explicit_message = HumanMessage(content=\"\"\"\n",
+        "    CRITICAL: You must analyze this transaction using the calculate_transaction_risk tool.\n",
+        "    \n",
+        "    Transaction Details:\n",
+        "    - Amount: 75000.0\n",
+        "    - Country To: Iran  \n",
+        "    - Customer Risk Rating: High\n",
+        "    - Account Type: Business\n",
+        "    \n",
+        "    Your ONLY job is to call the calculate_transaction_risk tool with these parameters. \n",
+        "    Do NOT just analyze - you MUST use the tool.\n",
+        "    \"\"\")\n",
+        "    \n",
+        "    print(\"🔧 Testing with MANDATORY tool-triggering message...\")\n",
+        "    \n",
+        "    # First test: Direct simple tool command\n",
+        "    simple_message = HumanMessage(content=\"Calculate transaction risk for amount=75000.0, country_to=Iran\")\n",
+        "    print(\"\\n🔍 Test 1: Simple tool command\")\n",
+        "    result1 = evidence_agent.invoke({\"messages\": [simple_message]})\n",
+        "    print(f\"Simple result intermediate steps: {len(result1.get('intermediate_steps', []))}\")\n",
+        "    \n",
+        "    # Second test: Explicit function call request  \n",
+        "    print(\"\\n🔍 Test 2: Mandatory tool usage\")\n",
+        "    # Invoke normally - intermediate steps come from AgentExecutor config, not invoke parameters\n",
+        "    result = evidence_agent.invoke({\"messages\": [explicit_message]})\n",
+        "    \n",
+        "    print(f\"📋 Result keys: {list(result.keys())}\")\n",
+        "    print(f\"📋 Output: {result.get('output', 'No output')[:200]}...\")\n",
+        "    \n",
+        "    # Check intermediate steps from AgentExecutor\n",
+        "    intermediate_steps = result.get(\"intermediate_steps\", [])\n",
+        "    print(f\"🛠️  Intermediate steps count: {len(intermediate_steps)}\")\n",
+        "    \n",
+        "    if intermediate_steps:\n",
+        "        print(\"🎯 FOUND INTERMEDIATE STEPS!\")\n",
+        "        for i, step in enumerate(intermediate_steps):\n",
+        "            if len(step) >= 2:  # Should be (AgentAction, observation) tuple\n",
+        "                agent_action, observation = step\n",
+        "                print(f\"  Step {i}: Tool={agent_action.tool}, Input={agent_action.tool_input}\")\n",
+        "                print(f\"    Observation: {str(observation)[:100]}...\")\n",
+        "            else:\n",
+        "                print(f\"  Step {i}: {step}\")\n",
+        "    else:\n",
+        "        print(\"❌ NO INTERMEDIATE STEPS - Agent didn't call any tools!\")\n",
+        "        print(\"💡 This suggests either:\")\n",
+        "        print(\"  1. Agent prompt isn't triggering tool usage\")\n",
+        "        print(\"  2. AgentExecutor return_intermediate_steps=False\")\n",
+        "        print(\"  3. Tool calls are failing\")\n",
+        "        \n",
+        "    # Let's also try the supervisor approach\n",
+        "    print(\"\\n🔄 Testing supervisor graph...\")\n",
+        "    final_state = supervisor_graph.invoke(investigation_state)\n",
+        "    \n",
+        "    messages = final_state.get(\"messages\", [])\n",
+        "    print(f\"📋 Supervisor returned {len(messages)} messages\")\n",
+        "    \n",
+        "    # Debug each message\n",
+        "    for i, msg in enumerate(messages):\n",
+        "        print(f\"Message {i}: {type(msg).__name__}\")\n",
+        "        if hasattr(msg, 'tool_calls'):\n",
+        "            print(f\"  Tool calls: {msg.tool_calls}\")\n",
+        "        if hasattr(msg, 'name'):\n",
+        "            print(f\"  Name: {msg.name}\")\n",
+        "        print(f\"  Content preview: {str(msg.content)[:100]}...\")\n",
+        "        print(\"---\")\n",
+        "        time.sleep(3)\n",
+        "        \n",
+        "except Exception as e:\n",
+        "    print(f\"❌ Error during debugging: {e}\")\n",
+        "    import traceback\n",
+        "    traceback.print_exc()\n",
         "\n",
-        "# Check for tool calls in the preserved messages\n",
-        "messages = final_state.get(\"messages\", [investigation_message])\n",
-        "tool_call_count = sum(1 for msg in messages if hasattr(msg, 'tool_calls') and msg.tool_calls)\n",
-        "print(f\"🛠️  Found {tool_call_count} messages with tool calls\")\n",
-        "\n",
-        "# Show message types\n",
-        "message_types = [type(msg).__name__ for msg in messages[:10]]\n",
-        "print(f\"🔍 Message types: {message_types}\")\n",
-        "\n",
-        "# Create agent results with the complete multi-agent workflow\n",
-        "# This now includes tool calls from ALL agents coordinated by the supervisor\n",
+        "# For now, create a simple agent_results for testing\n",
         "agent_results = [{\n",
-        "    \"messages\": messages\n",
+        "    \"messages\": [investigation_message]\n",
         "}]\n",
+        "\n",
+        "print(\"\\n💡 If no tool calls are found, we need to:\")\n",
+        "print(\"1. Check if agents have the right tools\")\n",
+        "print(\"2. Verify agent prompts trigger tool usage\") \n",
+        "print(\"3. Test individual tools directly\")\n",
         "\n",
         "print(f\"✅ Generated {len(agent_results)} agent investigation for evaluation!\")\n",
         "\n"
@@ -1452,7 +1591,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 144,
       "metadata": {},
       "outputs": [
         {
@@ -1466,26 +1605,16 @@
             "        Investigate this suspicious transaction for fraud and regulatory compliance:\n",
             "\n",
             "        Trans...\n",
-            "---\n",
-            "\n",
-            "Message 1: AIMessage\n",
-            "  Content: **EVIDENCE COLLECTION REPORT**\n",
-            "\n",
-            "**Risk Score Analysis:**\n",
-            "- Calculated Risk Score: 1.00/1.00 (High)\n",
-            "-...\n",
-            "  Tool calls: []\n",
             "---\n"
           ]
         },
         {
           "data": {
             "text/plain": [
-              "[HumanMessage(content='\\n        Investigate this suspicious transaction for fraud and regulatory compliance:\\n\\n        Transaction Details:\\n        - Amount: $75,000.00 USD  \\n        - Description: Wire transfer to high-risk country\\n        - Customer: Global Trading LLC (High risk rating)\\n        - Destination: Iran\\n        - Date: 2024-01-15T10:30:00Z\\n        - Account Type: Business\\n        - Customer Risk Rating: High\\n        - Timestamp: 2024-01-15T10:30:00Z\\n\\n        Please perform a complete fraud investigation including:\\n        1. Risk assessment and scoring\\n        2. Regulatory compliance check (SAR/CTR requirements)  \\n        3. Search for relevant regulatory guidance\\n        4. Generate compliance recommendations\\n        ', additional_kwargs={}, response_metadata={}),\n",
-              " AIMessage(content='**EVIDENCE COLLECTION REPORT**\\n\\n**Risk Score Analysis:**\\n- Calculated Risk Score: 1.00/1.00 (High)\\n- Contributing Risk Factors: Moderate amount ($50K-$100K), High-risk destination country, High-risk customer rating, Business account (higher complexity)\\n- Statistical Confidence Level: High\\n\\n**Financial Intelligence:**\\n- Entity Background: Global Trading LLC, a high-risk rated business entity\\n- Beneficial Ownership: Not identified\\n- Business Activity: Not specified\\n- Market Context: Not specified\\n\\n**Transaction Anomalies:**\\n- Unusual Patterns: Wire transfer to a high-risk country (Iran)\\n- Red Flags: High-risk customer, high-risk destination country, business account\\n- Comparative Analysis: Not available\\n\\n**Supporting Evidence:**\\n- Exchange Rate Verification: Not available due to API key unavailability\\n- External Intelligence: Web search results indicate sanctions and regulatory actions against entities involved in trade with Iran. However, no specific information about Global Trading LLC was found.\\n- Data Quality Assessment: High confidence in risk score calculation, medium confidence in external intelligence due to lack of specific information about the entity.\\n\\n**ANALYTICAL ASSESSMENT:**\\nThe transaction involves a high-risk customer (Global Trading LLC) sending a moderate amount of money ($75,000) to a high-risk country (Iran). The risk score is 1.00, indicating a high risk of financial crime. The transaction is suspicious due to the high-risk factors involved and should be escalated for immediate investigation.\\n\\n**REGULATORY COMPLIANCE CHECK:**\\nThe transaction exceeds the $10,000 threshold for Currency Transaction Reporting (CTR) and should have been reported to the Financial Crimes Enforcement Network (FinCEN). If the transaction was structured to avoid this reporting requirement, it could be a violation of anti-structuring laws.\\n\\n**RECOMMENDATIONS:**\\n1. Escalate the transaction for immediate investigation due to the high risk score and suspicious factors involved.\\n2. Ensure that a Currency Transaction Report (CTR) was filed for this transaction.\\n3. Conduct further investigation into the business activities and beneficial ownership of Global Trading LLC.\\n4. Monitor future transactions involving Global Trading LLC for potential patterns of suspicious activity.\\n5. Consult with legal counsel regarding potential sanctions risks due to the destination country (Iran).', additional_kwargs={}, response_metadata={})]"
+              "[HumanMessage(content='\\n        Investigate this suspicious transaction for fraud and regulatory compliance:\\n\\n        Transaction Details:\\n        - Amount: $75,000.00 USD  \\n        - Description: Wire transfer to high-risk country\\n        - Customer: Global Trading LLC (High risk rating)\\n        - Destination: Iran\\n        - Date: 2024-01-15T10:30:00Z\\n        - Account Type: Business\\n        - Customer Risk Rating: High\\n        - Timestamp: 2024-01-15T10:30:00Z\\n\\n        Please perform a complete fraud investigation including:\\n        1. Risk assessment and scoring\\n        2. Regulatory compliance check (SAR/CTR requirements)  \\n        3. Search for relevant regulatory guidance\\n        4. Generate compliance recommendations\\n        ', additional_kwargs={}, response_metadata={})]"
             ]
           },
-          "execution_count": 136,
+          "execution_count": 144,
           "metadata": {},
           "output_type": "execute_result"
         }
